Reporting Section Completed

--- a/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
@@ -223,9 +223,9 @@
                         </form>
                     </div>
 
-                    <small class="text-muted d-block mt-2" data-tour="rp.tip">
+                    @* <small class="text-muted d-block mt-2" data-tour="rp.tip">
                         @Localizer["TipUsePresetsThenAdjust"]
-                    </small>
+                    </small> *@
                 </div>
             </div>
         </div>
