--- a/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
@@ -56,10 +56,7 @@
             <li class="breadcrumb-item">
                 <a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a>
             </li>
-            <li class="breadcrumb-item">
-                <a asp-area="Users" asp-controller="Transfers" asp-action="Index">@Localizer["Transfers"]</a>
-            </li>
-            <li class="breadcrumb-item active" aria-current="page">@Localizer["Index"]</li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["Transfers"]</li>
         </ol>
     </div>
 </div>
