--- a/MODAMSWeb/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/Index.cshtml
@@ -40,28 +40,19 @@
                 </div>
             </div>
         </div>
-
-        <div class="btn-list">
-            <a asp-area="Admin"
-               asp-controller="Categories"
-               asp-action="CreateCategory"
-               class="btn btn-info-gradient mb-4 trShadow"
-               data-tour="cat.new">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
-                    <path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5
-                             s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104
-                             C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z
-                             M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10
-                             C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9
-                             c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" />
-                </svg>
-                @Localizer["NewCategory"]
-            </a>
-        </div>
-
         <div class="card">
             <div class="card-body project-list-table-container">
                 <div class="table-responsive">
+                    <div class="toolbar d-flex align-items-center gap-2 flex-wrap mb-2">
+                        <a asp-area="Admin"
+                           asp-controller="Categories"
+                           asp-action="CreateCategory"
+                           class="btn btn-outline-info"
+                           data-tour="cat.new" title="@Localizer["NewCategory"]">
+                            <i class="fa fa-circle-plus" aria-hidden="true"></i>
+                            <span>@Localizer["NewCategory"]</span>
+                        </a>
+                    </div>
                     <table id="tblCategories"
                            class="table table-bordered text-nowrap border-bottom dataTable no-footer"
                            data-tour="cat.table">
@@ -117,29 +108,19 @@
                 </div>
             </div>
         </div>
-
-        <div class="btn-list">
-            <a asp-area="Admin"
-               asp-controller="Categories"
-               asp-action="CreateSubCategory"
-               class="btn btn-primary mb-4 trShadow disabled"
-               id="btnCreateSubCategory"
-               data-tour="cat.sub.new">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
-                    <path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5
-                             s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104
-                             C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z
-                             M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10
-                             C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9
-                             c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" />
-                </svg>
-                @Localizer["NewSubCategory"]
-            </a>
-        </div>
-
         <div class="card trShadow">
             <div class="card-body project-list-table-container">
                 <div class="table-responsive" id="dvSubCategories">
+                    <div class="toolbar d-flex align-items-center gap-2 flex-wrap mb-2">
+                        <a asp-area="Admin"
+                           asp-controller="Categories"
+                           asp-action="CreateSubCategory"
+                           class="btn btn-outline-info"
+                           data-tour="cat.sub.new" title="@Localizer["NewSubCategory"]">
+                            <i class="fa fa-circle-plus" aria-hidden="true"></i>
+                            <span>@Localizer["NewSubCategory"]</span>
+                        </a>
+                    </div>
                     <table id="tblSubCategories"
                            class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main"
                            data-tour="cat.sub.table">
