--- a/MODAMSWeb/Areas/Admin/Views/Donors/CreateDonor.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Donors/CreateDonor.cshtml
@@ -9,14 +9,18 @@
 }
 
 <!-- PAGE-HEADER -->
-<div class="page-header">
+<div class="page-header" data-tour="don.create.header">
     <div>
-        <h1 class="page-title">@Localizer["CreateDonor"]</h1>
+        <h1 class="page-title" data-tour="don.create.title">@Localizer["CreateDonor"]</h1>
     </div>
-    <div class="ms-auto pageheader-btn">
+    <div class="ms-auto pageheader-btn" data-tour="don.create.breadcrumbs">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
-            <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Donors" asp-action="Index">@Localizer["Donors"]</a></li>
+            <li class="breadcrumb-item">
+                <a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a asp-area="Admin" asp-controller="Donors" asp-action="Index">@Localizer["Donors"]</a>
+            </li>
             <li class="breadcrumb-item active" aria-current="page">@Localizer["CreateDonor"]</li>
         </ol>
     </div>
@@ -27,57 +31,57 @@
     <div class="col-lg-12 col-md-12">
         <div class="card">
             <div class="card-header border-bottom">
-                <h4 class="mb-0">@Localizer["DonorDetails"]</h4>
+                <h4 class="mb-0" data-tour="don.create.section">@Localizer["DonorDetails"]</h4>
             </div>
+
             <div class="card-body p-0">
                 <div class="row p-5 border-bottom">
                     <div class="col-lg-8 col-md-8">
-                        <form method="post" asp-action="CreateDonor" id="frmDonor">
+                        <form method="post" asp-action="CreateDonor" id="frmDonor" data-tour="don.create.form">
                             <div class="card-body">
                                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-                                <input asp-for="Id" hidden />
-                                @*<input asp-for="Employee.RoleName" hidden />*@
+                                <input asp-for="Id" type="hidden" />
+
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <div class="mb-3 form-group">
+                                        <div class="mb-3 form-group" data-tour="don.create.code">
                                             <label asp-for="Code"></label>
-                                            <input asp-for="Code" class="form-control" aria-required="true" />
+                                            <input asp-for="Code" class="form-control" aria-required="true" autocomplete="off" />
                                             <span asp-validation-for="Code" class="text-danger"></span>
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <div class="mb-3 form-group">
+                                        <div class="mb-3 form-group" data-tour="don.create.name">
                                             <label asp-for="Name"></label>
-                                            <input asp-for="Name" class="form-control" aria-required="true" />
+                                            <input asp-for="Name" class="form-control" aria-required="true" autocomplete="off" />
                                             <span asp-validation-for="Name" class="text-danger"></span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </form>
-                    </div>
-                </div>
+                    </div> <!-- col -->
+                </div> <!-- row -->
+
                 <div class="row p-5">
                     <div class="btn-list">
-                        <button id="btnSubmit" class="btn btn-info"><i class="fa fa-check-circle"></i> @Localizer["SaveChanges"]</button>
-                        <a asp-area="Admin" asp-controller="Donors" asp-action="Index" class="btn btn-gray"><i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]</a>
+                        <button id="btnSubmit" class="btn btn-info" data-tour="don.create.submit">
+                            <i class="fa fa-check-circle"></i> @Localizer["SaveChanges"]
+                        </button>
+                        <a asp-area="Admin" asp-controller="Donors" asp-action="Index"
+                           class="btn btn-gray" data-tour="don.create.cancel">
+                            <i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]
+                        </a>
                     </div>
                 </div>
-            </div>
+            </div> <!-- card-body -->
         </div>
     </div>
 </div>
 <!--ROW CLOSED-->
 @section scripts {
-    <script>
-        $(document).ready(() => {
-            $("#btnSubmit").on("click", () => {
-                $("#frmDonor").submit();
-            });
-
-
-        });
-    </script>
+    <script src="~/js/pages/admin/donors/donors-createdonor.js" asp-append-version="true"></script>
 }
