--- a/MODAMSWeb/Areas/Admin/Views/Donors/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Donors/Index.cshtml
@@ -6,15 +6,18 @@
 
 @{
     ViewData["TourPageKey"] = "Donors/Index";
+    var isSo = CultureInfo.CurrentUICulture.Name == "so";
 }
 
-<div class="page-header">
+<div class="page-header" data-tour="donors.header">
     <div>
-        <h1 class="page-title">@Localizer["Donors"]</h1>
+        <h1 class="page-title" data-tour="donors.title">@Localizer["Donors"]</h1>
     </div>
-    <div class="ms-auto pageheader-btn">
+    <div class="ms-auto pageheader-btn" data-tour="donors.breadcrumbs">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item">
+                <a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a>
+            </li>
             <li class="breadcrumb-item active" aria-current="page">@Localizer["Donors"]</li>
         </ol>
     </div>
@@ -22,92 +25,75 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="card">
+        <div class="card" data-tour="donors.section.card">
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
-                    <h4 class="m-0">@Localizer["DonorList"]</h4>
-                    <div class="btn-list">
+                    <h4 class="m-0" data-tour="donors.section.title">@Localizer["DonorList"]</h4>
+                    <div class="btn-list" data-tour="donors.section.actions">
+                        <!-- reserved -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-md-12 mb-3">
-        <div class="btn-list">
-            <a asp-area="Admin" asp-controller="Donors" asp-action="CreateDonor" class="btn btn-info-gradient trShadow">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
-                @Localizer["NewDonor"]
-            </a>
-        </div>
-    </div>
+
     <div class="col-12 col-sm-12">
         <div class="card">
             <div class="card-body project-list-table-container">
-                <div class="col-6 table-responsive">
-                    <table id="tblDonors" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
+                <div class="col-12 col-lg-8 table-responsive" data-tour="donors.table.container">
+                    <div class="toolbar d-flex align-items-center gap-2 flex-wrap mb-2">
+                        <a asp-area="Admin" asp-controller="Donors" asp-action="CreateDonor"
+                           class="btn btn-outline-info"
+                           data-tour="donors.create" title="@Localizer["NewDonor"]">
+                            <i class="fa fa-circle-plus" aria-hidden="true"></i>
+                            <span>@Localizer["NewDonor"]</span>
+                        </a>
+                    </div>
+                    <table id="tblDonors"
+                           class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main"
+                           data-tour="donors.table">
                         <thead class="table-head">
                             <tr>
                                 <th class="bg-transparent border-bottom-0 w-5">#</th>
                                 <th class="bg-transparent border-bottom-0">@Localizer["DonorCode"]</th>
                                 <th class="bg-transparent border-bottom-0">@Localizer["DonorName"]</th>
-                                <th class="bg-transparent border-bottom-0 no-btn">@Localizer["Action"]</th>
                             </tr>
                         </thead>
                         <tbody class="table-body">
                             @{
                                 var nCounter = 0;
-                                var sCounter = "";
-
                                 foreach (var donor in Model)
                                 {
                                     nCounter++;
-                                    sCounter = (nCounter < 10) ? "0" + nCounter : nCounter.ToString();
+                                    var sCounter = (nCounter < 10) ? "0" + nCounter : nCounter.ToString();
 
-                                    <tr>
+                                    <tr data-id="@donor.Id">
                                         <td class="text-muted fs-15 fw-semibold text-center">@sCounter.</td>
                                         <td class="text-muted fs-15 fw-semibold">@donor.Code</td>
                                         <td class="text-muted fs-15 fw-semibold">@donor.Name</td>
-                                        <td>
-                                            <div class="d-flex align-items-stretch">
-                                                <a asp-controller="Donors" asp-action="EditDonor" asp-route-id="@donor.Id"
-                                                   class="btn btn-sm btn-outline-info me-1 data-bs-toggle="tooltip" data-bs-original-title="@Localizer["EditDonor"]">
-                                                    <i class="fe fe-edit"></i>
-                                                </a>
-                                            </div>
-                                        </td>
                                     </tr>
                                 }
                             }
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <div class="card-footer">
-                <a asp-area="Users" asp-controller="Home" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
+
+                <!-- Optional: spot to explain search/export for the tour -->
+                <div class="d-none" data-tour="donors.table.search"></div>
+                <div class="d-none" data-tour="donors.table.export"></div>
             </div>
 
+            <div class="card-footer">
+                <a asp-area="Users" asp-controller="Home" asp-action="Index"
+                   class="btn btn-outline-default" data-tour="donors.back">
+                    <i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]
+                </a>
+            </div>
         </div>
     </div>
 </div>
 
 @section scripts {
-
-    <!-- PROJECT-LIST JS-->
-    @*<script src="~/assets/js/project-list.js"></script>*@
-    <script>
-
-        $(document).ready(function () {
-            hideMenu();
-            makeDataTable("#tblDonors", "1");
-            // $('#tblDonors').DataTable({
-            //     language: {
-            //         searchPlaceholder: 'Search...',
-            //         sSearch: '',
-            //     }
-            // });
-
-        });
-
-    </script>
+    <partial name="_DataTablesAssets" />
+    <script src="~/js/pages/admin/donors/donors-index.js" asp-append-version="true"></script>
 }
-
