--- a/MODAMSWeb/Areas/Admin/Views/Departments/EditDepartment.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/EditDepartment.cshtml
@@ -9,11 +9,11 @@
 }
 
 <!-- PAGE-HEADER -->
-<div class="page-header">
+<div class="page-header" data-tour="dept.edit.header">
     <div>
-        <h1 class="page-title">@Localizer["EditDepartment"]</h1>
+        <h1 class="page-title" data-tour="dept.edit.title">@Localizer["EditDepartment"]</h1>
     </div>
-    <div class="ms-auto pageheader-btn">
+    <div class="ms-auto pageheader-btn" data-tour="dept.edit.breadcrumbs">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
             <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Departments" asp-action="Index">@Localizer["DepartmentList"]</a></li>
@@ -27,48 +27,55 @@
     <div class="col-lg-12 col-md-12">
         <div class="card">
             <div class="card-header border-bottom">
-                <h4 class="mb-0">@Localizer["DepartmentDetails"]</h4>
+                <h4 class="mb-0" data-tour="dept.edit.section">@Localizer["DepartmentDetails"]</h4>
             </div>
+
             <div class="card-body p-0">
                 <div class="row p-5 border-bottom">
                     <div class="col-lg-8 col-md-8">
-                        <form method="post" asp-action="EditDepartment" id="frmDepartment">
+                        <form method="post" asp-action="EditDepartment" id="frmDepartment" data-tour="dept.edit.form">
                             <div class="card-body">
                                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                                 <input asp-for="department.Id" hidden />
+
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <div class="mb-3 form-group">
+                                        <div class="mb-3 form-group" data-tour="dept.edit.name">
                                             <label asp-for="department.Name"></label>
                                             <input asp-for="department.Name" class="form-control" aria-required="true" placeholder="Department Name" />
                                             <span asp-validation-for="department.Name" class="text-danger"></span>
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <div class="mb-3 form-group">
+                                        <div class="mb-3 form-group" data-tour="dept.edit.nameSo">
                                             <label asp-for="department.NameSo"></label>
                                             <input asp-for="department.NameSo" class="form-control" aria-required="true" placeholder="Department Name" />
                                             <span asp-validation-for="department.NameSo" class="text-danger"></span>
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <div class="mb-3 form-group">
+                                        <div class="mb-3 form-group" data-tour="dept.edit.upper">
                                             <label asp-for="department.UpperLevelDeptId"></label>
-                                            <select asp-for="department.UpperLevelDeptId" asp-items="@Model.Departments"
-                                                    class="form-control select2 form-select">
+                                            <select asp-for="department.UpperLevelDeptId"
+                                                    asp-items="@Model.Departments"
+                                                    class="form-control select2 form-select"
+                                                    data-placeholder="-@Localizer["SelectDepartment"]-">
                                                 <option disabled selected>-@Localizer["SelectDepartment"]-</option>
                                             </select>
                                             <span asp-validation-for="department.UpperLevelDeptId" class="text-danger"></span>
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <div class="mb-3 form-group">
+                                        <div class="mb-3 form-group" data-tour="dept.edit.owner">
                                             <label asp-for="DepartmentOwner"></label>
                                             <input asp-for="DepartmentOwner" class="form-control" aria-required="true" readonly placeholder="Department Owner" />
                                             <span asp-validation-for="DepartmentOwner" class="text-danger"></span>
@@ -78,34 +85,24 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-lg-4 col-md-4">
-                        <div class="card-body">
-                            <div class="profile-img-main rounded" id="profile-image">
-                            </div>
-                        </div>
-                    </div>
                 </div>
+
                 <div class="row p-5">
                     <div class="btn-list">
-                        <button id="btnSubmit" class="btn btn-info"><i class="fa fa-check-circle"></i> @Localizer["SaveDepartment"]</button>
-                        <a asp-area="Admin" asp-controller="Departments" asp-action="Index" class="btn btn-gray"><i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]</a>
+                        <button id="btnSubmit" class="btn btn-info" data-tour="dept.edit.submit">
+                            <i class="fa fa-check-circle"></i> @Localizer["SaveDepartment"]
+                        </button>
+                        <a asp-area="Admin" asp-controller="Departments" asp-action="Index" class="btn btn-gray" data-tour="dept.edit.cancel">
+                            <i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]
+                        </a>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
 <!--ROW CLOSED-->
 @section scripts {
-    <script>
-        $(document).ready(() => {
-            $('.select2').select2();
-
-            $("#btnSubmit").on("click", () => {
-                $("#frmDepartment").submit();
-            });
-
-
-        });
-    </script>
+    <script src="~/js/pages/admin/departments/departments-editdepartment.js" asp-append-version="true"></script>
 }
