--- a/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
@@ -6,15 +6,18 @@
 
 @{
     ViewData["TourPageKey"] = "Departments/Index";
+    var isSomali = CultureInfo.CurrentCulture.Name == "so";
 }
 
-<div class="page-header">
+<div class="page-header" data-tour="dept.index.header">
     <div>
-        <h1 class="page-title">@Localizer["Departments"]</h1>
+        <h1 class="page-title" data-tour="dept.index.title">@Localizer["Departments"]</h1>
     </div>
-    <div class="ms-auto pageheader-btn">
+    <div class="ms-auto pageheader-btn" data-tour="dept.index.breadcrumbs">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item">
+                <a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a>
+            </li>
             <li class="breadcrumb-item active" aria-current="page">@Localizer["Departments"]</li>
         </ol>
     </div>
@@ -25,56 +28,65 @@
         <div class="card">
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
-                    <h4 class="m-0">@Localizer["DepartmentList"]</h4>
-                    <div class="btn-list">
-                        <a class="btn btn-outline-primary" asp-area="Admin" asp-controller="Departments" asp-action="OrganizationChart">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-diagram-3" viewBox="0 0 16 16">
+                    <h4 class="m-0" data-tour="dept.index.list-title">@Localizer["DepartmentList"]</h4>
+                    <div class="btn-list" data-tour="dept.index.top-actions">
+                        <a class="btn btn-outline-primary"
+                           asp-area="Admin" asp-controller="Departments" asp-action="OrganizationChart"
+                           title="@Localizer["OrganizationChart"]" data-tour="dept.index.orgchart">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                 fill="currentColor" class="source-logo bi bi-diagram-3" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H14a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 2 7h5.5V6A1.5 1.5 0 0 1 6 4.5v-1zM8.5 5a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1zM0 11.5A1.5 1.5 0 0 1 1.5 10h1A1.5 1.5 0 0 1 4 11.5v1A1.5 1.5 0 0 1 2.5 14h-1A1.5 1.5 0 0 1 0 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm4.5.5A1.5 1.5 0 0 1 7.5 10h1a1.5 1.5 0 0 1 1.5 1.5v1A1.5 1.5 0 0 1 8.5 14h-1A1.5 1.5 0 0 1 6 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm4.5.5a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z" />
                             </svg>
                         </a>
-                        <a class="btn btn-primary" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M3.5,12C3.223877,12,3,12.223877,3,12.5S3.223877,13,3.5,13S4,12.776123,4,12.5S3.776123,12,3.5,12z M6.5,8h15C21.776123,8,22,7.776123,22,7.5S21.776123,7,21.5,7h-15C6.223877,7,6,7.223877,6,7.5S6.223877,8,6.5,8z M3.5,17C3.223877,17,3,17.223877,3,17.5S3.223877,18,3.5,18S4,17.776123,4,17.5S3.776123,17,3.5,17z M21.5,12h-15C6.223877,12,6,12.223877,6,12.5S6.223877,13,6.5,13h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,12,21.5,12z M3.5,7C3.223877,7,3,7.223877,3,7.5S3.223877,8,3.5,8S4,7.776123,4,7.5S3.776123,7,3.5,7z M21.5,17h-15C6.223877,17,6,17.223877,6,17.5S6.223877,18,6.5,18h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,17,21.5,17z" /></svg>
+                        <a class="btn btn-primary" href="#" data-tour="dept.index.more">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white"
+                                 enable-background="new 0 0 24 24" viewBox="0 0 24 24">
+                                <path d="M3.5,12C3.223877,12,3,12.223877,3,12.5S3.223877,13,3.5,13S4,12.776123,4,12.5S3.776123,12,3.5,12z M6.5,8h15C21.776123,8,22,7.776123,22,7.5S21.776123,7,21.5,7h-15C6.223877,7,6,7.223877,6,7.5S6.223877,8,6.5,8z M3.5,17C3.223877,17,3,17.223877,3,17.5S3.223877,18,3.5,18S4,17.776123,4,17.5S3.776123,17,3.5,17z M21.5,12h-15C6.223877,12,6,12.223877,6,12.5S6.223877,13,6.5,13h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,12,21.5,12z M3.5,7C3.223877,7,3,7.223877,3,7.5S3.223877,8,3.5,8S4,7.776123,4,7.5S3.776123,7,3.5,7z M21.5,17h-15C6.223877,17,6,17.223877,6,17.5S6.223877,18,6.5,18h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,17,21.5,17z" />
+                            </svg>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-md-12 mb-3">
-        <div class="btn-list">
-            <a asp-area="Admin" asp-controller="Departments" asp-action="CreateDepartment" class="btn btn-info-gradient trShadow">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
-                @Localizer["NewDepartment"]
-            </a>
-        </div>
-    </div>
+    
     <div class="col-12 col-md-12">
         <div class="card">
-            <div class="card-body project-list-table-container">
+            <div class="card-body project-list-table-container" data-tour="dept.index.tablewrap">
                 <div class="col-12 table-responsive">
-                    <table id="tblDepartments" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
+                    <div class="toolbar d-flex align-items-center gap-2 flex-wrap mb-2">
+                        <a asp-area="Admin" asp-controller="Departments" asp-action="CreateDepartment"
+                           class="btn btn-outline-info"
+                           data-tour="dept.index.create" title="@Localizer["NewDepartment"]">
+                            <i class="fa fa-circle-plus" aria-hidden="true"></i>
+                            <span>@Localizer["NewDepartment"]</span>
+                        </a>
+                    </div>
+                    <table id="tblDepartments"
+                           class="table table--hover-actions text-nowrap mb-0 table-bordered border-top border-bottom project-list-main"
+                           data-tour="dept.index.table">
                         <thead class="table-head">
                             <tr>
                                 <th class="bg-transparent border-bottom-0 w-5">#</th>
                                 <th class="bg-transparent border-bottom-0">@Localizer["DepartmentName"]</th>
                                 <th class="bg-transparent border-bottom-0">@Localizer["StoreOwner"]</th>
                                 <th class="bg-transparent border-bottom-0">@Localizer["StoreUsers"]</th>
-                                <th class="bg-transparent border-bottom-0 no-btn">@Localizer["Action"]</th>
                             </tr>
                         </thead>
                         <tbody class="table-body">
                             @{
                                 var nCounter = 0;
-                                var sCounter = "";
-                                var isSomali = CultureInfo.CurrentCulture.Name == "so";
                                 foreach (var department in Model.departments)
                                 {
                                     nCounter++;
-                                    sCounter = (nCounter < 10) ? "0" + nCounter : nCounter.ToString();
+                                    var sCounter = (nCounter < 10) ? "0" + nCounter : nCounter.ToString();
+                                    var deptName = isSomali ? department.NameSo : department.Name;
 
-                                    <tr>
+                                    <tr data-id="@department.Id"
+                                        data-name="@deptName"
+                                        data-mod="@((department.Name == "Ministry of Defense") ? "1" : "0")">
                                         <td class="text-muted fs-15 fw-semibold text-center">@sCounter.</td>
-                                        <td class="text-muted fs-15 fw-semibold">@(isSomali?department.NameSo:department.Name)</td>
+                                        <td class="text-muted fs-15 fw-semibold">@deptName</td>
                                         <td class="text-muted fs-15 fw-semibold">
                                             @{
                                                 if (department.OwnerName != "Vacant")
@@ -110,7 +122,6 @@
                                                             if (emp != null)
                                                             {
                                                                 string sContent = $"{emp.JobTitle} <br /> {emp.Email}";
-
                                                                 <a data-bs-container="body"
                                                                    data-bs-content="@Html.Raw(sContent)"
                                                                    data-bs-html="true"
@@ -127,23 +138,6 @@
                                                 }
                                             </div>
                                         </td>
-                                        <td>
-                                            @{
-                                                if (department.Name != "Ministry of Defense")
-                                                {
-                                                    <div class="d-flex align-items-stretch">
-                                                        <a asp-controller="Departments" asp-action="EditDepartment" asp-route-id="@department.Id" class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["EditDepartment"]">
-                                                            <i class="fe fe-edit"></i>
-                                                        </a>
-                                                        <a asp-controller="Departments" asp-action="DepartmentHeads" asp-route-id="@department.Id" class="btn btn-sm btn-outline-info me-1" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["StoreUsers"]">
-                                                            <i class="fe fe-users"></i>
-                                                        </a>
-                                                    </div>
-
-                                                }
-                                            }
-
-                                        </td>
                                     </tr>
                                 }
                             }
@@ -152,20 +146,15 @@
                 </div>
             </div>
             <div class="card-footer">
-                <a asp-area="Users" asp-controller="Home" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
+                <a asp-area="Users" asp-controller="Home" asp-action="Index" class="btn btn-outline-default" data-tour="dept.index.back">
+                    <i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]
+                </a>
             </div>
         </div>
     </div>
 </div>
+
 @section scripts {
-    <!-- PROJECT-LIST JS-->
-    @*<script src="~/assets/js/project-list.js"></script>*@
-    <script>
-        $(document).ready(function () {
-            hideMenu();
-            makeDataTable("#tblDepartments", "1");
-
-        });
-
-    </script>
+    <partial name="_DataTablesAssets" />
+    <script src="~/js/pages/admin/departments/departments-index.js" asp-append-version="true"></script>
 }
